@@ -6104,3 +6104,6 @@ v0.92.0.11:
   - Undo PR #4933 to retain backwards compatibility.
   - Fix no feedback when using a /plot command in the wilderness.
   - Fix regression: null message shown from /t spawn and /n spawn when used from the wilderness.
+  - API: Add WorldCoord.getTownOrNull().
+    - Gets the town at that WorldCoord or null if it is in the wilderness.
+    - Best used after WorldCoord.hasTownBlock();
